# lox-rs

./: Cargo.toml  README.md  test.flox
crates/flox-core/: Cargo.toml
crates/flox-core/src/: error.rs  lib.rs
crates/flox-core/src/lex/: error.rs  lexer.rs  mod.rs  token.rs
crates/flox-core/src/parse/: ast.rs  error.rs  parser.rs
crates/flox-core/src/rt/: builtin.rs  env.rs  error.rs  exec.rs  mod.rs  native.rs  types.rs
crates/flox-wasm/: Cargo.toml
crates/flox-wasm/src/: lib.rs
src/: error.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  repl.rs  scanner.rs  token.rs  token_type.rs
src/interpreter/: builtin.rs  env.rs  error.rs  exec.rs  native.rs  types.rs
src/lex/: lexer.rs  mod.rs  token_type.rs
src/lexer/: error.rs  lexer.rs  scanner.rs  token.rs  token_type.rs
src/parser/: ast.rs  error.rs  expr.rs  parse.rs  parser.rs  stmt.rs
