[package]
name = "lox-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.15", default-features = false, features = ["std", "derive", "help"] }
rustyline = { version = "14.0.0", default-features = false }
